--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -7,7 +7,7 @@
     "build": "vite build",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "dev": "vite dev",
+    "dev": "vite dev --port 3004",
     "lint": "eslint .",
     "preview": "vite preview"
   },
