chore: no, cache still necessary

--- a/apps/nuxt/turbo.json
+++ b/apps/nuxt/turbo.json
@@ -3,7 +3,7 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
-      "cache": true
+      "cache": false
     },
     "generate": {
       "outputs": ["dist/**"]
