--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
-  "globalEnv": ["RUNNER_OS"],
+  "globalEnv": ["RUNNER_OS", "*VERCEL_ENV"],
   "pipeline": {
     "build": {
       "outputs": ["dist/**"],
