--- a/apps/remix/turbo.json
+++ b/apps/remix/turbo.json
@@ -3,6 +3,8 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
+      "dotEnv": [".env", ".env.local"],
+      "env": ["VERCEL_ENV"],
       "outputs": [".output/**", "api/**", "build/**", "public/build/**"]
     }
   }
