--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev",
+    "dev": "remix dev --sourcemap",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -12,14 +12,12 @@
     "@remix-run/node": "^1.19.3",
     "@remix-run/react": "^1.19.3",
     "@remix-run/vercel": "^1.19.3",
-    "@sanity/composer": "workspace:*",
     "@sanity/overlays": "workspace:*",
     "@vercel/node": "^2.15.10",
     "apps-common": "workspace:*",
     "isbot": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanity": "3.16.5-pink-lizard.39",
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
