--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -13,7 +13,10 @@
     "@remix-run/react": "^1.19.3",
     "@remix-run/vercel": "^1.19.3",
     "@sanity/overlays": "workspace:*",
+    "@sanity/preview-kit": "workspace:*",
+    "lodash.get": "^4.4.2",
     "@vercel/node": "^2.15.10",
+    "@vercel/stega": "0.1.0",
     "apps-common": "workspace:*",
     "isbot": "^3.7.0",
     "react": "^18.2.0",
@@ -23,6 +26,7 @@
   "devDependencies": {
     "@remix-run/dev": "^1.19.3",
     "@remix-run/eslint-config": "^1.19.3",
+    "@types/lodash.get": "^4.4.7",
     "@remix-run/serve": "^1.19.3",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
