--- a/packages/channels/package.json
+++ b/packages/channels/package.json
@@ -32,7 +32,7 @@
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
     "prepublishOnly": "npm run build",
-    "test": "vitest",
+    "test": "vitest --pass-with-no-tests",
     "watch": "pkg watch --strict"
   },
   "browserslist": [
