--- a/apps/common/package.json
+++ b/apps/common/package.json
@@ -134,7 +134,7 @@
     "@sanity/pkg-utils": "^2.4.9",
     "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
-    "sanity": "3.18.0",
+    "sanity": "^3.18.0",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
@@ -142,7 +142,7 @@
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "rxjs": "^7.8.1",
-    "sanity": "3.18.0",
+    "sanity": "^3.18.0",
     "styled-components": "^5.3.11"
   },
   "engines": {
