--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -92,7 +92,7 @@
     "root": true
   },
   "dependencies": {
-    "sanity": "3.16.5-pink-lizard.39"
+    "sanity": "^3.18.0"
   },
   "devDependencies": {
     "@sanity/pkg-utils": "^3.0.0",
