--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -27,7 +27,7 @@
     "postcss": "8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanity": "3.16.5-pink-lizard.39",
+    "sanity": "^3.18.0",
     "sanity-plugin-iframe-pane": "^2.5.8",
     "styled-components": "^5.3.11",
     "suspend-react": "0.1.3",
