--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -14,7 +14,7 @@
     "apps-common": "workspace:*",
     "channels": "workspace:*",
     "rxjs": "^7.8.1",
-    "sanity": "3.16.5-pink-lizard.39"
+    "sanity": "^3.18.0"
   },
   "devDependencies": {
     "@nuxt/devtools": "^0.8.5",
