--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -7,13 +7,13 @@
   },
   "dependencies": {
     "@sanity/composer": "workspace:*",
-    "@sanity/vision": "3.16.5-pink-lizard.39",
+    "@sanity/vision": "^3.18.0",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "apps-common": "workspace:*",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sanity": "3.16.5-pink-lizard.39",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sanity": "^3.18.0",
     "styled-components": "^5.3.11",
     "typescript": "^5.2.2"
   }
