--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -112,7 +112,7 @@
     "@vercel/stega": "0.1.0",
     "history": "^5.3.0",
     "nanoid": "^5.0.1",
-    "sanity": "3.16.5-pink-lizard.39",
+    "sanity": "^3.18.0",
     "valibot": "^0.17.1"
   },
   "devDependencies": {
