chore: fix conf

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -43,7 +43,7 @@
         "groq",
         "sanity"
       ],
-      "matchFilenames": ["package.json"],
+      "matchFileNames": ["package.json"],
       "matchDepTypes": ["dependencies"],
       "followTag": "pink-lizard",
       "schedule": ["at any time"],
