--- a/apps/studio/turbo.json
+++ b/apps/studio/turbo.json
@@ -3,6 +3,7 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
+      "cache": false,
       "dotEnv": [".env", ".env.local"],
       "env": ["SANITY_STUDIO_*"],
       "outputs": [".sanity/**", "dist/**"]
