--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -14,6 +14,7 @@
     "@remix-run/vercel": "^1.19.3",
     "@sanity/overlays": "workspace:*",
     "@sanity/preview-kit": "workspace:*",
+    "@sanity/image-url": "^1.0.2",
     "@vercel/node": "^3.0.7",
     "@vercel/stega": "0.1.0",
     "apps-common": "workspace:*",
