--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -6,6 +6,7 @@
     "dev": "sanity dev"
   },
   "dependencies": {
+    "@sanity/assist": "^1.2.8",
     "@sanity/composer": "workspace:*",
     "@sanity/vision": "^3.18.0",
     "@types/react": "^18.2.28",
