chore: add slug route

--- a/apps/common/package.json
+++ b/apps/common/package.json
@@ -134,6 +134,8 @@
   },
   "dependencies": {
     "@sanity/icons": "^2.5.0",
+    "@sanity/preview-kit": "workspace:*",
+    "@sanity/overlays": "workspace:*",
     "@sanity/ui": "^1.8.2"
   },
   "devDependencies": {
