chore: quick POC with docs list

--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -16,8 +16,10 @@
     "@sanity/overlays": "workspace:*",
     "@sanity/preview-kit": "workspace:*",
     "@vercel/node": "^3.0.7",
+    "visual-editing-helpers": "workspace:*",
     "@vercel/stega": "0.1.0",
     "apps-common": "workspace:*",
+    "channels": "workspace:*",
     "isbot": "^3.7.0",
     "lodash.get": "^4.4.2",
     "react": "^18.2.0",
