--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.18.0",
+    "sanity-plugin-asset-source-unsplash": "^1.1.1",
     "styled-components": "^5.3.11",
     "typescript": "^5.2.2"
   }
