--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,6 +6,21 @@
     "packages/overlays": {
       "prerelease": true
     },
+    "packages/groq-store": {
+      "prerelease": true
+    },
+    "packages/core-loader": {
+      "prerelease": true
+    },
+    "packages/react-loader": {
+      "prerelease": true
+    },
+    "packages/nuxt-loader": {
+      "prerelease": true
+    },
+    "packages/svelte-loader": {
+      "prerelease": true
+    },
     "packages/preview-kit": {
       "prerelease": true,
       "release-as": "0.0.0"
