--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -116,6 +116,7 @@
     "valibot": "^0.19.0"
   },
   "devDependencies": {
+    "@sanity/client": "^6.6.0",
     "@sanity/pkg-utils": "^3.0.0",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
