--- a/apps/common/package.json
+++ b/apps/common/package.json
@@ -7,67 +7,18 @@
   "sideEffects": false,
   "type": "module",
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "source": "./src/index.ts",
-      "require": "./dist/index.cjs",
-      "node": {
-        "module": "./dist/index.js",
-        "import": "./dist/index.cjs.js"
-      },
-      "import": "./dist/index.js",
-      "default": "./dist/index.js"
-    },
-    "./env": {
-      "types": "./dist/env.d.ts",
-      "source": "./src/env.ts",
-      "require": "./dist/env.cjs",
-      "import": "./dist/env.js",
-      "default": "./dist/env.js"
-    },
-    "./queries": {
-      "types": "./dist/queries.d.ts",
-      "source": "./src/queries.ts",
-      "require": "./dist/queries.cjs",
-      "import": "./dist/queries.js",
-      "default": "./dist/queries.js"
-    },
-    "./utils": {
-      "types": "./dist/utils.d.ts",
-      "source": "./src/utils.ts",
-      "require": "./dist/utils.cjs",
-      "import": "./dist/utils.js",
-      "default": "./dist/utils.js"
-    },
+    ".": "./src/index.ts",
+    "./env": "./src/env.ts",
+    "./queries": "./src/queries.ts",
+    "./utils": "./src/utils.ts",
     "./package.json": "./package.json"
   },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "source": "./src/index.ts",
-  "types": "./dist/index.d.ts",
-  "typesVersions": {
-    "*": {
-      "env": [
-        "./dist/env.d.ts"
-      ],
-      "queries": [
-        "./dist/queries.d.ts"
-      ],
-      "utils": [
-        "./dist/utils.d.ts"
-      ]
-    }
-  },
   "files": [
-    "dist"
+    "src"
   ],
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
-    "prepublishOnly": "npm run build",
-    "test": "tsc --noEmit",
-    "watch": "pkg watch --strict"
+    "test": "tsc --noEmit"
   },
   "browserslist": [
     "> 0.2% and last 2 versions and supports es6-module and supports es6-module-dynamic-import and not dead and not IE 11",
@@ -143,8 +94,6 @@
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "styled-components": "^5.3.11",
-    "@sanity/pkg-utils": "^3.0.0",
-    "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
     "sanity": "^3.18.0",
     "typescript": "^5.2.2"
@@ -158,6 +107,6 @@
     "styled-components": "^5.3.11"
   },
   "engines": {
-    "node": ">=16.14"
+    "node": ">=18"
   }
 }
