--- a/apps/remix/tsconfig.json
+++ b/apps/remix/tsconfig.json
@@ -12,7 +12,7 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "target": "ES2019",
     "strict": true,
