--- a/apps/remix/tsconfig.json
+++ b/apps/remix/tsconfig.json
@@ -4,7 +4,7 @@
     "sanity.config.ts",
     "tailwind.config.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
   ],
   "compilerOptions": {
     "skipLibCheck": true,
