chore: fix loading `apps-common` in nuxt

--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -2,6 +2,7 @@
   "name": "apps-nuxt",
   "private": true,
   "scripts": {
+    "predev": "nuxt prepare",
     "build": "nuxt build",
     "dev": "nuxt dev -p 3003",
     "generate": "nuxt generate",
