chore: setup `apps-common` in svelte

--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -21,6 +21,7 @@
     "@types/cookie": "^0.5.2",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
+    "apps-common": "workspace:*",
     "eslint": "^8.51.0",
     "eslint-plugin-svelte": "^2.34.0",
     "svelte": "^4.2.1",
