fix: initial `@sanity/react-loader`

--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -16,6 +16,7 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/overlays": "workspace:*",
     "@sanity/preview-kit": "workspace:*",
+    "@sanity/react-loader": "workspace:*",
     "@vercel/node": "^3.0.7",
     "@vercel/stega": "0.1.0",
     "apps-common": "workspace:*",
