chore: clarify error

--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -25,8 +25,7 @@
     "lodash.get": "^4.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "source-map-support": "^0.5.21",
-    "visual-editing-helpers": "workspace:*"
+    "source-map-support": "^0.5.21"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.19.3",
