--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -99,7 +99,9 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/ui": "^1.8.2"
+    "@sanity/icons": "^2.5.0",
+    "@sanity/ui": "^1.8.2",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@sanity/pkg-utils": "^3.0.0",
