--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -15,7 +15,7 @@
     "@remix-run/vercel": "^1.19.3",
     "@sanity/image-url": "^1.0.2",
     "@sanity/overlays": "workspace:*",
-    "@sanity/preview-kit": "workspace:*",
+    "@sanity/preview-kit": "^3.2.3",
     "@sanity/react-loader": "workspace:*",
     "@vercel/node": "^3.0.7",
     "@vercel/stega": "0.1.0",
