--- a/apps/common/package.json
+++ b/apps/common/package.json
@@ -81,17 +81,17 @@
   },
   "dependencies": {
     "@sanity/icons": "^2.5.0",
-    "@sanity/preview-kit": "workspace:*",
     "@sanity/overlays": "workspace:*",
+    "@sanity/preview-kit": "3.2.4-canary.0",
     "@sanity/ui": "^1.8.2"
   },
   "devDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "styled-components": "^5.3.11",
     "rxjs": "^7.8.1",
     "sanity": "^3.18.0",
+    "styled-components": "^5.3.11",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
