--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@next/bundle-analyzer": "13.5.4",
     "@sanity/overlays": "workspace:*",
-    "@sanity/preview-kit": "^3.2.3",
+    "@sanity/preview-kit": "3.2.4-canary.0",
     "@types/node": "20.8.4",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
