--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -73,6 +73,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
+    "@sanity/client": "^6.6.0",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
@@ -81,6 +82,7 @@
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
+    "@sanity/client": "^6.6.0",
     "sanity": "^3.18.0"
   },
   "engines": {
