chore: set loader channel and broadcast perspective

--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -104,6 +104,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@sanity/client": "^6.6.0",
     "@sanity/pkg-utils": "^3.1.0",
     "channels": "workspace:*",
     "react": "^18.2.0",
@@ -115,6 +116,7 @@
     "visual-editing-helpers": "workspace:*"
   },
   "peerDependencies": {
+    "@sanity/client": "^6.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
