refactor(remix): use JSX helper

--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -13,6 +13,7 @@
     "@remix-run/node": "^1.19.3",
     "@remix-run/react": "^1.19.3",
     "@remix-run/vercel": "^1.19.3",
+    "@sanity/csm": "workspace:*",
     "@sanity/image-url": "^1.0.2",
     "@sanity/overlays": "workspace:*",
     "@sanity/preview-kit": "3.2.4-canary.0",
