chore: preview-kit shortcut

--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -101,6 +101,7 @@
   "dependencies": {
     "@sanity/icons": "^2.5.0",
     "@sanity/ui": "^1.8.2",
+    "@sanity/preview-kit": "^3.2.4",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
