chore(remix): link common lib

--- a/apps/remix/tsconfig.json
+++ b/apps/remix/tsconfig.json
@@ -23,6 +23,8 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"],
+      "apps-common/*": ["../common/src/*"],
+      "apps-common": ["../common/src"],
       "@sanity/csm": ["../../packages/csm/src"],
       "@sanity/react-loader/jsx": ["../../packages/react-loader/src/jsx"],
       "@sanity/react-loader": ["../../packages/react-loader/src"]
