feat: time for `@sanity/nuxt-loader`

--- a/apps/remix/tsconfig.json
+++ b/apps/remix/tsconfig.json
@@ -6,6 +6,7 @@
     "**/*.ts",
     "**/*.tsx",
     "../../packages/csm/src",
+    "../../packages/core-loader/src",
     "../../packages/react-loader/src"
   ],
   "compilerOptions": {
@@ -23,11 +24,12 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"],
-      "apps-common/*": ["../common/src/*"],
       "apps-common": ["../common/src"],
+      "apps-common/*": ["../common/src/*"],
       "@sanity/csm": ["../../packages/csm/src"],
+      "@sanity/core-loader": ["../../packages/core-loader/src"],
+      "@sanity/react-loader": ["../../packages/react-loader/src"],
       "@sanity/react-loader/jsx": ["../../packages/react-loader/src/jsx"],
-      "@sanity/react-loader": ["../../packages/react-loader/src"]
     },
 
     // Remix takes care of building everything in `remix build`.
