--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -94,13 +94,15 @@
     "@sanity/groq-store": "workspace:*"
   },
   "devDependencies": {
+    "@nanostores/query": "0.2.4",
     "@sanity/client": "^6.6.0",
     "@sanity/pkg-utils": "^3.1.0",
-    "channels": "workspace:*",
-    "typescript": "^5.2.2",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
+    "channels": "workspace:*",
     "eslint": "^8.51.0",
+    "nanostores": "0.9.3",
+    "typescript": "^5.2.2",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
