--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "13.5.5",
+    "@portabletext/react": "^3.0.11",
+    "@sanity/csm": "workspace:*",
+    "@sanity/image-url": "^1.0.2",
     "@sanity/overlays": "workspace:*",
     "@sanity/preview-kit": "3.2.4",
+    "@sanity/react-loader": "workspace:*",
     "@types/node": "20.8.6",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
