--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -34,6 +34,13 @@
   "module": "./dist/index.js",
   "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
+  "typesVersions": {
+    "*": {
+      "jsx": [
+        "./dist/jsx.d.ts"
+      ]
+    }
+  },
   "files": [
     "dist"
   ],
