--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -138,7 +138,7 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "@sanity/client": "^6.6.0",
-    "@sanity/overlays": "0.0.0"
+    "@sanity/overlays": "workspace:*"
   },
   "engines": {
     "node": ">=18"
