chore: prepare release

--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/composer",
-  "version": "0.0.1",
+  "version": "0.0.1-pink-lizard.0",
   "license": "MIT",
   "author": "Sanity.io <hello@sanity.io>",
   "sideEffects": false,
@@ -101,12 +101,12 @@
   "dependencies": {
     "@sanity/icons": "^2.6.0",
     "@sanity/ui": "^1.8.2",
-    "@sanity/preview-kit": "^3.2.5",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@sanity/client": "^6.6.0",
     "@sanity/pkg-utils": "^3.1.1",
+    "@sanity/preview-kit": "^3.2.5",
     "channels": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -121,7 +121,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "sanity": "^3.18.0",
+    "sanity": "3.18.2-pink-lizard.21",
     "styled-components": "^5.3.11"
   },
   "engines": {
