--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,7 +2,9 @@
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "bump-minor-pre-major": true,
   "packages": {
-    "packages/composer": {},
+    "packages/composer": {
+      "prerelease": true
+    },
     "packages/overlays": {
       "prerelease": true
     },
@@ -20,10 +22,6 @@
     },
     "packages/svelte-loader": {
       "prerelease": true
-    },
-    "packages/preview-kit": {
-      "prerelease": true,
-      "release-as": "0.0.0"
     }
   }
 }
