chore: release prep

--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/core-loader",
-  "version": "0.0.1",
+  "version": "0.0.1-pink-lizard.0",
   "license": "MIT",
   "author": "Sanity.io <hello@sanity.io>",
   "sideEffects": false,
@@ -90,10 +90,8 @@
     },
     "root": true
   },
-  "dependencies": {
-    "@sanity/groq-store": "workspace:*"
-  },
   "devDependencies": {
+    "@sanity/groq-store": "workspace:*",
     "@nanostores/query": "0.2.4",
     "@sanity/client": "^6.6.0",
     "@sanity/pkg-utils": "^3.1.1",
@@ -116,6 +114,6 @@
   },
   "publishConfig": {
     "access": "restricted",
-    "provenance": false
+    "tag": "pink-lizard"
   }
 }
