--- a/packages/csm/package.json
+++ b/packages/csm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/csm",
-  "version": "0.0.0",
+  "version": "0.0.0-pink-lizard.0",
   "homepage": "https://github.com/sanity-io/visual-editing#readme",
   "bugs": {
     "url": "https://github.com/sanity-io/visual-editing/issues"
@@ -117,8 +117,7 @@
     "node": ">=18"
   },
   "publishConfig": {
-    "access": "public",
-    "provenance": false,
-    "tag": "canary"
+    "access": "restricted",
+    "tag": "pink-lizard"
   }
 }
