--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/react-loader",
-  "version": "0.0.1",
+  "version": "0.0.1-pink-lizard.0",
   "license": "MIT",
   "author": "Sanity.io <hello@sanity.io>",
   "sideEffects": false,
@@ -114,12 +114,10 @@
     },
     "root": true
   },
-  "dependencies": {
+  "devDependencies": {
     "@sanity/core-loader": "workspace:*",
     "@sanity/csm": "workspace:*",
-    "@sanity/groq-store": "workspace:*"
-  },
-  "devDependencies": {
+    "@sanity/groq-store": "workspace:*",
     "@sanity/client": "^6.6.0",
     "@sanity/overlays": "workspace:*",
     "@sanity/pkg-utils": "^3.1.1",
@@ -145,6 +143,6 @@
   },
   "publishConfig": {
     "access": "restricted",
-    "provenance": false
+    "tag": "pink-lizard"
   }
 }
