--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/overlays",
-  "version": "0.0.0",
+  "version": "0.0.0-pink-lizard.0",
   "homepage": "https://github.com/sanity-io/overlays#readme",
   "bugs": {
     "url": "https://github.com/sanity-io/overlays/issues"
@@ -112,7 +112,6 @@
     "@vercel/stega": "0.1.0",
     "history": "^5.3.0",
     "nanoid": "^5.0.2",
-    "sanity": "^3.18.1",
     "valibot": "^0.19.0"
   },
   "devDependencies": {
@@ -144,14 +143,19 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
+    "sanity": "3.18.2-pink-lizard.21",
     "styled-components": "^5.3.11"
+  },
+  "peerDependenciesMeta": {
+    "sanity": {
+      "optional": true
+    }
   },
   "engines": {
     "node": ">=16.14"
   },
   "publishConfig": {
     "access": "public",
-    "tag": "canary",
-    "provenance": false
+    "tag": "pink-lizard"
   }
 }
