--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/svelte-loader",
-  "version": "0.0.1",
+  "version": "0.0.1-pink-lizard.0",
   "license": "MIT",
   "author": "Sanity.io <hello@sanity.io>",
   "sideEffects": false,
@@ -90,11 +90,9 @@
     },
     "root": true
   },
-  "dependencies": {
-    "@sanity/groq-store": "workspace:*",
-    "@sanity/core-loader": "workspace:*"
-  },
   "devDependencies": {
+    "@sanity/groq-store": "workspace:*",
+    "@sanity/core-loader": "workspace:*",
     "@sanity/client": "^6.6.0",
     "@sanity/pkg-utils": "^3.1.1",
     "channels": "workspace:*",
@@ -115,6 +113,6 @@
   },
   "publishConfig": {
     "access": "restricted",
-    "provenance": false
+    "tag": "pink-lizard"
   }
 }
