--- a/release-please-config.json
+++ b/release-please-config.json
@@ -5,19 +5,22 @@
     "packages/composer": {
       "prerelease": true
     },
-    "packages/overlays": {
+    "packages/core-loader": {
+      "prerelease": true
+    },
+    "packages/csm": {
       "prerelease": true
     },
     "packages/groq-store": {
       "prerelease": true
     },
-    "packages/core-loader": {
+    "packages/nuxt-loader": {
+      "prerelease": true
+    },
+    "packages/overlays": {
       "prerelease": true
     },
     "packages/react-loader": {
-      "prerelease": true
-    },
-    "packages/nuxt-loader": {
       "prerelease": true
     },
     "packages/svelte-loader": {
