--- a/packages/groq-store/package.json
+++ b/packages/groq-store/package.json
@@ -111,7 +111,7 @@
     "node": ">=18"
   },
   "publishConfig": {
-    "access": "restricted",
+    "access": "public",
     "tag": "pink-lizard"
   }
 }
