--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@sanity/assist": "^1.2.9",
     "@sanity/composer": "workspace:*",
+    "@sanity/ui": "^1.8.2",
     "@sanity/vision": "^3.18.1",
     "@types/react": "^18.2.29",
     "@types/react-dom": "^18.2.14",
