chore: generate artifacts

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "page-builder-demo:dev": "turbo run dev --filter=./apps/page-builder-demo --filter=./apps/studio",
     "preview": "turbo run preview",
     "test": "turbo run test",
+    "artifact": "turbo run artifact",
     "typecheck": "turbo run typecheck",
     "watch": "turbo run watch"
   },
