--- a/packages/nuxt-loader/package.json
+++ b/packages/nuxt-loader/package.json
@@ -27,10 +27,11 @@
     "dist"
   ],
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "rimraf dist artifact",
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
     "prepack": "npm run build",
+    "artifact": "pnpm pack --pack-destination artifact",
     "test": "tsc --noEmit",
     "watch": "pkg watch --strict"
   },
