--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -40,6 +40,7 @@
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
     "prepack": "npm run build",
+    "artifact": "pnpm pack --pack-destination artifact",
     "test": "vitest",
     "watch": "pkg watch --strict"
   },
