--- a/turbo.json
+++ b/turbo.json
@@ -13,7 +13,7 @@
       "cache": false
     },
     "lint": {},
-    "artifact": {"dependsOn": ["^build","^artifact"], "outputs": ["artifact/*.tgz"]},
+    "artifact": { "dependsOn": ["^artifact"], "outputs": ["artifact/*.tgz"] },
     "typecheck": {
       "env": ["GITHUB_ACTIONS"],
       "dependsOn": ["^build"]
