chore: fix build issues

--- a/turbo.json
+++ b/turbo.json
@@ -13,7 +13,10 @@
       "cache": false
     },
     "lint": {},
-    "artifact": { "dependsOn": ["^artifact"], "outputs": ["artifact/*.tgz"] },
+    "artifact": {
+      "dependsOn": ["^artifact"],
+      "outputs": ["artifact/*.tgz", "artifact/CHANGELOG.md"]
+    },
     "typecheck": {
       "env": ["GITHUB_ACTIONS"],
       "dependsOn": ["^build"]
