--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -42,7 +42,8 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "CHANGELOG.md"
   ],
   "scripts": {
     "prebuild": "rimraf dist artifact",
