--- a/turbo.json
+++ b/turbo.json
@@ -15,7 +15,11 @@
     "lint": {},
     "artifact": {
       "dependsOn": ["^artifact"],
-      "outputs": ["artifact/*.tgz", "artifact/CHANGELOG.md"]
+      "outputs": [
+        "artifact/*.tgz",
+        "artifact/CHANGELOG.md",
+        "artifact/README.md"
+      ]
     },
     "typecheck": {
       "env": ["GITHUB_ACTIONS"],
