--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -37,3 +37,4 @@ jobs:
           path: |
             packages/*/artifact/*.tgz
             packages/*/artifact/CHANGELOG.md
+            packages/*/artifact/README.md
