--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -24,7 +24,8 @@
   "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "CHANGELOG.md"
   ],
   "scripts": {
     "prebuild": "rimraf dist artifact",
