--- a/packages/csm/package.json
+++ b/packages/csm/package.json
@@ -33,7 +33,8 @@
   "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "CHANGELOG.md"
   ],
   "scripts": {
     "prebuild": "rimraf dist artifact",
