fix: include dist folder

--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -49,7 +49,7 @@
     "prebuild": "rimraf dist artifact",
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
-    "preapck": "npm run build",
+    "prepack": "npm run build",
     "artifact": "pnpm pack --pack-destination artifact",
     "test": "tsc --noEmit",
     "dev": "pkg watch --strict"
