fix: add barebones svelte loader

--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -16,8 +16,10 @@
     "@neoconfetti/svelte": "^1.0.0",
     "@sanity/composer": "workspace:*",
     "@sanity/overlays": "workspace:*",
+    "@sanity/client": "^6.7.0",
     "@sveltejs/adapter-auto": "^2.1.0",
     "@sveltejs/kit": "^1.26.0",
+    "@sanity/svelte-loader": "workspace:*",
     "@types/cookie": "^0.5.3",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
