feat(nuxt): shoes

--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@sanity/composer": "workspace:*",
+    "@sanity/csm": "workspace:*",
+    "@sanity/nuxt-loader": "workspace:*",
     "@sanity/overlays": "workspace:*",
     "apps-common": "workspace:*",
     "channels": "workspace:*",
