fix(pink-lizard): remove unnecessary suffix

--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/composer",
-  "version": "0.3.0-pink-lizard.0",
+  "version": "0.3.0-pink-lizard",
   "license": "MIT",
   "author": "Sanity.io <hello@sanity.io>",
   "sideEffects": false,
@@ -112,7 +112,6 @@
     "channels": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
     "styled-components": "^6.1.0",
     "sanity": "^3.18.1",
     "typescript": "^5.2.2",
@@ -122,9 +121,8 @@
     "@sanity/client": "^6.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
     "sanity": "3.18.2-pink-lizard.21",
-    "styled-components": "^5.3.11"
+    "styled-components": "^6.1.0"
   },
   "engines": {
     "node": ">=16.14"
