--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/overlays",
-  "version": "0.1.2-pink-lizard.0",
+  "version": "0.1.2-pink-lizard",
   "homepage": "https://github.com/sanity-io/overlays#readme",
   "bugs": {
     "url": "https://github.com/sanity-io/overlays/issues"
@@ -120,7 +120,6 @@
     "@sanity/pkg-utils": "^3.1.1",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
-    "@types/styled-components": "^5.1.29",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "channels": "workspace:*",
@@ -133,7 +132,6 @@
     "ls-engines": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
     "rimraf": "^5.0.1",
     "styled-components": "^6.1.0",
     "typescript": "^5.2.2",
@@ -143,9 +141,8 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
     "sanity": "3.18.2-pink-lizard.21",
-    "styled-components": "^5.3.11"
+    "styled-components": "^6.1.0"
   },
   "peerDependenciesMeta": {
     "sanity": {
