--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/core-loader",
-  "version": "0.1.4-pink-lizard.0",
+  "version": "0.1.4-pink-lizard",
   "license": "MIT",
   "author": "Sanity.io <hello@sanity.io>",
   "sideEffects": false,
