--- a/packages/nuxt-loader/package.json
+++ b/packages/nuxt-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/nuxt-loader",
-  "version": "0.2.0-pink-lizard.0",
+  "version": "0.2.0-pink-lizard",
   "license": "MIT",
   "author": "Sanity.io <hello@sanity.io>",
   "sideEffects": false,
