--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/svelte-loader",
-  "version": "0.0.5-pink-lizard.0",
+  "version": "0.0.5-pink-lizard",
   "license": "MIT",
   "author": "Sanity.io <hello@sanity.io>",
   "sideEffects": false,
