--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@sanity/vision": "3.18.2-pink-lizard.21",
     "create-sanity": "3.18.2-pink-lizard.21",
     "groq": "3.18.2-pink-lizard.21",
-    "sanity": "3.18.2-pink-lizard.21"
+    "sanity": "3.18.2-pink-lizard.21",
+    "styled-components": "6.1.0"
   },
   "devDependencies": {
     "prettier": "3.0.3",
@@ -63,7 +64,8 @@
       "@sanity/vision": "$@sanity/vision",
       "create-sanity": "$create-sanity",
       "groq": "$groq",
-      "sanity": "$sanity"
+      "sanity": "$sanity",
+      "styled-components": "$styled-components"
     }
   }
 }
