fix: resolve keyed array paths correctly

--- a/packages/composer/package.json
+++ b/packages/composer/package.json
@@ -107,8 +107,8 @@
   },
   "devDependencies": {
     "@sanity/client": "^6.7.0",
+    "@sanity/csm": "workspace:*",
     "@sanity/pkg-utils": "^3.1.1",
-    "@sanity/preview-kit": "^3.2.6",
     "channels": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
