--- a/packages/composer/tsconfig.json
+++ b/packages/composer/tsconfig.json
@@ -3,8 +3,11 @@
   "compilerOptions": {
     "incremental": true,
     "noEmit": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "paths": {
+      "@sanity/csm": ["../csm/src"]
+    }
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx", "../csm/src"],
   "exclude": ["dist", "node_modules"]
 }
